--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 #spring.datasource.password=root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://13.232.82.185:3306/ingdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://18.222.187.3:3306/ingdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username= inguser1
-spring.datasource.password= H@ckath0n
+spring.datasource.password= 
 
 
 sonar.host.url=http://13.232.82.185:9000
